Added fake-fullscreen in hlwm and updated theme for polybar

--- a/polybar/config
+++ b/polybar/config
@@ -8,12 +8,12 @@
 ;=====================================================
 
 [colors]
-background = #c1c4bc
-;#bdae93
+background = #bf1d2021
+;#c1c4bc
 ;#3a3432
 
 background-alt = #444
-foreground = #1d2021
+foreground = #aabdae93
 ;#ebdbb2
 foreground-alt = #555
 primary = #ffb52a
@@ -24,7 +24,8 @@ linecolor = #fba922
 bordercolor = #333
 accent = #e60053
 
-[bar/my-awesome-polybar0]
+
+[bar/bspwm-polybar]
 monitor = ${env:MONITOR:eDP1}
 enable-ipc = true
 
@@ -47,6 +48,53 @@ border-color = #00000000
 
 padding-left = 0
 padding-right = 2
+
+module-margin-left = 1
+module-margin-right = 1
+
+font-0 = Comic Sans MS:size=10:weight=Italic
+#font-0 = Droid Sans Mono:size=10;1
+font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
+font-2 = Wuncon Siji:pixelsize=10:weight=Regular;1
+#font-3 = FontAwesome:size=10:weight=Regular
+font-3 = DejaVu Sans:size=10
+font-4 = "Font Awesome 5 Free:style=Regular:pixelsize=10;2"
+font-5 = "Font Awesome 5 Free:style=Solid:pixelsize=10;2"
+font-6 = "Font Awesome 5 Brands:style=Regular:pixelsize=10;2"
+
+modules-left = updates cpu temperature fan memory isrunning-openvpn isrunning-firewall wlan
+modules-center = bspwm 
+modules-right = volume gmail weather battery xkeyboard date search
+
+tray-position = right
+tray-padding = 4
+tray-maxsize = 16
+
+
+
+[bar/my-awesome-polybar0]
+monitor = ${env:MONITOR:eDP1}
+enable-ipc = true
+
+width = 100%
+height = 20
+fixed-center = true
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3
+#line-color = #f00
+line-color = ${colors.linecolor}
+
+underline-size = 2
+overline-size = 1
+
+border-size = 1
+border-color = #00000000
+
+padding-left = 1
+padding-right = 1
 
 module-margin-left = 1
 module-margin-right = 1
@@ -158,6 +206,141 @@ modules-left = appmenu arch mpd spotify
 modules-center = filesystem
 modules-right = names taskwarrior ticker-btceur
 
+
+
+[module/bspwm]
+type = internal/bspwm
+
+; Only show workspaces defined on the same output as the bar
+; NOTE: The bspwm and XRandR monitor names must match, which they do by default.
+; Default: true
+pin-workspaces = false
+
+; Output mode flags after focused state label
+; Default: false
+inline-mode = false
+
+; Create click handler used to focus workspace
+; Default: true
+enable-click = true
+
+; Create scroll handlers used to cycle workspaces
+; Default: true
+enable-scroll = false
+
+; Set the scroll cycle direction 
+; Default: true
+reverse-scroll = false
+
+; Use fuzzy (partial) matching on labels when assigning 
+; icons to workspaces
+; Example: code;♚ will apply the icon to all workspaces 
+; containing
+
+ 'code' in the label
+; Default: false
+fuzzy-match = true
+
+
+; ws-icon-[0-9]+ = label;icon
+; Note that the label needs to correspond with the bspwm workspace name
+ws-icon-0 = term;
+ws-icon-1 = www;
+ws-icon-2 = file;
+ws-icon-3 = chat;
+ws-icon-4 = media;
+ws-icon-5 = code;
+ws-icon-6 = git;
+ws-icon-7 = docs;
+ws-icon-8 = sys;
+ws-icon-9 = other;
+
+; Available tags:
+;   <label-monitor>
+;   <label-state> - gets replaced with <label-(focused|urgent|occupied|empty)>
+;   <label-mode> - gets replaced with <label-(monocle|tiled|fullscreen|floating|locked|sticky|private)>
+; Default: <label-state>
+format = <label-state> <label-mode>
+
+; Available tokens:
+;   %name%
+; Default: %name%
+label-monitor = %name%
+
+; If any values for label-dimmed-N are defined, the workspace/mode
+; colors will get overridden with those values if the monitor is out of focus
+; To only override workspaces in a specific state, use:
+;   label-dimmed-focused
+;   label-dimmed-occupied
+;   label-dimmed-urgent
+;   label-dimmed-empty
+label-dimmed-foreground = #555
+label-dimmed-underline = ${colors.background}
+label-dimmed-focused-background = #f00
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-focused = " %icon% "
+label-focused-foreground = #ffffff
+label-focused-background = #3f3f3f
+label-focused-underline = #fba922
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-occupied = " %icon% "
+label-occupied-underline = #555555
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-urgent = " %icon% "
+label-urgent-foreground = #000000
+label-urgent-background = #bd2c40
+label-urgent-underline = #9b0a20
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-empty = " %icon% " 
+label-empty-foreground = #55
+
+; The following labels will be used to indicate the layout/mode
+; for the focused workspace. Requires <label-mode>
+;
+; Available tokens:
+;   None
+;label-monocle = 
+;label-tiled = 
+;label-fullscreen = 
+;label-floating
+
+ = 
+;label-pseudotiled = P
+;label-locked = 
+;label-locked-foreground = #bd2c40
+;label-sticky = 
+;label-sticky-foreground = #fba922
+;label-private = 
+;label-private-foreground = #bd2c40
+;label-marked = M
+
+; Separator in between workspaces
+
+;label-separator = |
+;label-separator-padding = 2
+;label-separator-foreground = #ffb52a
+
+
 [module/hlws]
 type              = custom/script
 exec              = python /home/notis/.config/herbstluftwm/hlws.py
@@ -174,7 +357,7 @@ type              = custom/script
 exec              = python /home/notis/.config/herbstluftwm/layout.py
 click-left       = exec herbstclient cycle_layout
 interval          = 2
-format-foreground = #665c54
+format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 ;format-underline = #555
 format-padding = 2
@@ -226,9 +409,11 @@ enable-scroll = false
 ; ;   %index%
 ; ; Default: %icon%  %name%
 label-active = %icon% %name%
-label-active-foreground = #665c54
-label-active-background = #83a598
-label-active-underline = #83a598
+label-active-foreground = #ebdbb2
+;#665c54
+label-active-background = #32302f
+;#83a598
+label-active-underline = #9fbc00
 ;
 ; ; Available tokens:
 ; ;   %name%
@@ -321,11 +506,12 @@ toggle-off-foreground = #55
 
 
 ; Only applies if <bar-progress> is used
-bar-progress-width = 30
+bar-progress-width = 20
 bar-progress-indicator = 
-bar-progress-fill = 
-bar-progress-empty = 
+bar-progress-fill = 
+bar-progress-empty = 
 bar-progress-fill-foreground = #00FF00
+bar-progress-empty-foreground = ${colors.foreground-alt}
 
 label-song-maxlen = 50
 label-song-ellipsis = true
@@ -378,16 +564,16 @@ ramp-coreload-3-font = 2
 ramp-coreload-3-foreground = #83a598
 ramp-coreload-4 = ▅
 ramp-coreload-4-font = 2
-ramp-coreload-4-foreground = #fba922
+ramp-coreload-4-foreground = #fabd2f
 ramp-coreload-5 = ▆
 ramp-coreload-5-font = 2
-ramp-coreload-5-foreground = #fba922
+ramp-coreload-5-foreground = #fabd2f
 ramp-coreload-6 = ▇
 ramp-coreload-6-font = 2
-ramp-coreload-6-foreground = #ff5555
+ramp-coreload-6-foreground = #fb4934
 ramp-coreload-7 = █
 ramp-coreload-7-font = 2
-ramp-coreload-7-foreground = #ff5555
+ramp-coreload-7-foreground = #fb4934
 
 [module/memory]
 type = internal/memory
@@ -617,7 +803,7 @@ format-prefix-foreground = ${colors.foreground}
 ;label = %{A1:catfish& disown:} %{A}
 ;exec = .config/polybar/packages.sh
 exec = echo " "
-click-left=catfish
+click-left="catfish >/dev/null 2>&1 &"
 
 [module/arch]
 type = custom/script
