[tmux] theme updated

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,14 +6,26 @@ set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' # this is for the cursor s
 
 # Make mouse useful in copy mode
 set -g mouse on
-
+setw -g mode-keys vi
 set -g set-clipboard on
+
+# To paste:
+bind-key -n C-y run "xclip -o | tmux load-buffer - ; tmux paste-buffer"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'powerline/block/green'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+#set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @offline_icon "✗"
 
 # for vim
 set -g @resurrect-strategy-vim 'session'
