--- a/polybar/config
+++ b/polybar/config
@@ -66,11 +66,54 @@ modules-left = archmenu updates cpu temperature fan memory wlan
 modules-center = bspwm 
 modules-right = volume gmail weather battery xkeyboard date 
 
+#tray-position = right
+#tray-padding = 4
+#tray-maxsize = 16
+
+[bar/bspwm-polybar0]
+monitor = ${env:MONITOR:eDP1}
+enable-ipc = true
+
+width = 100%
+height = 20
+fixed-center = true
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3
+#line-color = #f00
+line-color = ${colors.linecolor}
+
+underline-size = 2
+overline-size = 1
+
+border-size = 0
+border-color = #00000000
+
+padding-left = 0
+padding-right = 2
+
+module-margin-left = 1
+module-margin-right = 1
+
+#font-0 = Comic Sans MS:size=10:weight=Italic
+font-0 = Droid Sans Mono:size=10;1
+font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
+font-2 = Wuncon Siji:pixelsize=10:weight=Regular;1
+#font-3 = FontAwesome:size=10:weight=Regular
+font-3 = DejaVu Sans:size=10
+font-4 = "Font Awesome 5 Free:style=Regular:pixelsize=10;2"
+font-5 = "Font Awesome 5 Free:style=Solid:pixelsize=10;2"
+font-6 = "Font Awesome 5 Brands:style=Regular:pixelsize=10;2"
+
+modules-left = archmenu updates cpu temperature fan memory wlan
+modules-center = bspwm 
+modules-right = volume gmail weather battery xkeyboard date 
+
 tray-position = right
 tray-padding = 4
 tray-maxsize = 16
-
-
 
 [bar/my-awesome-polybar0]
 monitor = ${env:MONITOR:eDP1}
@@ -256,8 +299,8 @@ ws-icon-3 = chat;
 ws-icon-4 = media;
 ws-icon-5 = code;
 ws-icon-6 = git;
-ws-icon-7 = docs;
-ws-icon-8 = sys;
+ws-icon-7 = sys;
+ws-icon-8 = docs;
 ; Available tags:
 ;   <label-monitor>
 ;   <label-state> - gets replaced with <label-(focused|urgent|occupied|empty)>
@@ -286,7 +329,7 @@ label-dimmed-focused-background = #f00
 ;   %icon%
 ;   %index%
 ; Default: %icon%  %name%
-label-focused = " %icon% "
+label-focused = "  %icon%  "
 label-focused-foreground = #ffffff
 label-focused-background = #3f3f3f
 label-focused-underline = #fba922
@@ -296,7 +339,7 @@ label-focused-underline = #fba922
 ;   %icon%
 ;   %index%
 ; Default: %icon%  %name%
-label-occupied = " %icon% "
+label-occupied = "  %icon%  "
 label-occupied-underline = #555555
 
 ; Available tokens:
@@ -304,7 +347,7 @@ label-occupied-underline = #555555
 ;   %icon%
 ;   %index%
 ; Default: %icon%  %name%
-label-urgent = " %icon% "
+label-urgent = "  %icon%  "
 label-urgent-foreground = #000000
 label-urgent-background = #bd2c40
 label-urgent-underline = #9b0a20
@@ -314,7 +357,7 @@ label-urgent-underline = #9b0a20
 ;   %icon%
 ;   %index%
 ; Default: %icon%  %name%
-label-empty = " %icon% " 
+label-empty = 
 label-empty-foreground = #55
 
 ; The following labels will be used to indicate the layout/mode
@@ -322,26 +365,26 @@ label-empty-foreground = #55
 ;
 ; Available tokens:
 ;   None
-label-monocle = M
-label-tiled = T
-label-fullscreen = F 
-label-floating = fl
+label-monocle = [M]
+label-tiled = [T]
+label-fullscreen = [F] 
+label-floating = [~]
 
  = 
-label-pseudotiled = P
-label-locked = L 
+label-pseudotiled = [P]
+label-locked = [L] 
 label-locked-foreground = #bd2c40
-label-sticky = S
+label-sticky = [S]
 label-sticky-foreground = #fba922
-label-private = P
+label-private = [P]
 label-private-foreground = #bd2c40
-label-marked = M
+label-marked = [M]
 
 ; Separator in between workspaces
 
-label-separator = |
-label-separator-padding = 2
-label-separator-foreground = #ffb52a
+;label-separator = |
+;label-separator-padding = 2
+;label-separator-foreground = #ffb52a
 
 
 [module/hlws]
@@ -360,8 +403,8 @@ type              = custom/script
 exec              = python /home/notis/.config/herbstluftwm/layout.py
 click-left       = exec herbstclient cycle_layout
 interval          = 2
-format-foreground = #d79921 
-format-background = #32302f
+format-foreground = #32302f
+format-background = #d79921
 ;format-underline = #555
 format-padding = 2
 
@@ -412,9 +455,9 @@ enable-scroll = false
 ; ;   %index%
 ; ; Default: %icon%  %name%
 label-active = %icon% %name%
-label-active-foreground = #d79921
+label-active-foreground = #32302f
 ;#665c54
-label-active-background = #32302f
+label-active-background = #d79921
 ;#83a598
 label-active-overline = #d79921
 ;
@@ -702,13 +745,13 @@ time = %{A3:gsimplecal & disown:}%H:%M %{A}
 time-alt = %H:%M:%S
 
 format-prefix = 
-format-prefix-foreground = #d79921 
-format-prefix-background = #32302f 
+format-prefix-foreground = #32302f 
+format-prefix-background = #d79921 
 ;format-underline = #0a6cf5
 
 label = %date% %time%
-format-foreground= #d79921
-format-background= #32302f
+format-foreground= #32302f
+format-background= #d79921
 [module/volume]
 type = internal/volume
 master-mixer = Master
